--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
       },
     };
 
+    const fetchCat = async (text) => {
+      const OPEN_API_DOMAIN = "https://cataas.com";
+      const response = await fetch(`${OPEN_API_DOMAIN}/cat/says/${text}?json=true`);
+      const responseJson = await response.json();
+      //고양이 이미지만 빼옴
+      return `${OPEN_API_DOMAIN}/${responseJson.url}`;
+    };
+
 
     const Title = (props) => {
       return <h1>{props.children}</h1>;
@@ -70,7 +78,7 @@
           setErrorMessage("빈 값으로 만들 수 없습니다.");
           return;
         }
-        updateMainCat();
+        updateMainCat(value);
       }
 
       return (
@@ -128,8 +136,26 @@
       const [favorites, setFavorites] = React.useState(
         jsonLocalStorage.getItem("favorites") || []);
 
-      function updateMainCat() {
-        setMainCat(CAT2);
+      async function setInitialCat() {
+        const newCat = await fetchCat('First Cat');
+        console.log(newCat);
+        setMainCat(newCat);
+      }
+
+      //[] 빈 배열일 경우, 초기에만 불려라 라는 뜻
+      React.useEffect(() => {
+        setInitialCat();
+      }, []);
+
+
+      //setInitialCat();
+      console.log("hello");
+
+
+      async function updateMainCat(value) {
+        const newCat = await fetchCat(value);
+
+        setMainCat(newCat);
         const nextCounter = counter + 1;
         setCounter(nextCounter);
         jsonLocalStorage.setItem("counter", nextCounter);
