--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
     }
 
     function Favorites({ favorites }) {
+      //조건부 랜더링
+      if (favorites.length === 0) {
+        return (
+          <div> 사진 위 하트를 눌러 고양이 사진을 저장해봐요!</div>);
+
+      }
       return (
         <ul className="favorites">
           {favorites.map((cat) => (
@@ -114,12 +120,13 @@
       );
     }
 
-    const MainCard = ({ img, onHeartClick }) => {
+    const MainCard = ({ img, onHeartClick, alreadyFavorite }) => {
+      const heartIcon = alreadyFavorite ? "💖" : "🤍";
       return (
         <div className="main-card">
           <img src={img} alt="고양이" width="400" />
           <button
-            onClick={onHeartClick}>🤍</button>
+            onClick={onHeartClick}>{heartIcon}</button>
         </div>
       );
     };
@@ -130,11 +137,17 @@
       const CAT2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
       const CAT3 = "https://scataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
 
-
-      const [counter, setCounter] = React.useState(jsonLocalStorage.getItem("counter"));
+      //성능좋아지기 전
+      //const [counter, setCounter] = React.useState(jsonLocalStorage.getItem("counter"));
+      //성능좋아지고 나서
+      const [counter, setCounter] = React.useState(() => {
+        return jsonLocalStorage.getItem("counter");
+      });
       const [mainCat, setMainCat] = React.useState(CAT1);
-      const [favorites, setFavorites] = React.useState(
-        jsonLocalStorage.getItem("favorites") || []);
+      const [favorites, setFavorites] = React.useState(() => {
+        return jsonLocalStorage.getItem("favorites") || [];
+      });
+      const alreadyFavorite = favorites.includes(mainCat);
 
       async function setInitialCat() {
         const newCat = await fetchCat('First Cat');
@@ -156,9 +169,12 @@
         const newCat = await fetchCat(value);
 
         setMainCat(newCat);
-        const nextCounter = counter + 1;
-        setCounter(nextCounter);
-        jsonLocalStorage.setItem("counter", nextCounter);
+
+        setCounter((prev) => {
+          const nextCounter = prev + 1;
+          jsonLocalStorage.setItem("counter", nextCounter);
+          return nextCounter;
+        })
       }
 
       function handleHeartClick() {
@@ -169,11 +185,15 @@
         jsonLocalStorage.setItem("favorites", nextFavorites);
       }
 
+      const counterTitle = counter === null ? "" : counter + "번째";
+
       return (
         <div>
-          <Title>{counter}번째 고양이 가라사대</Title>
+          <Title>{
+            counterTitle
+          } 고양이 가라사대</Title>
           <Form updateMainCat={updateMainCat} />
-          <MainCard img={mainCat} onHeartClick={handleHeartClick} />
+          <MainCard img={mainCat} onHeartClick={handleHeartClick} alreadyFavorite={alreadyFavorite} />
           <Favorites favorites={favorites} />
         </div>
       );
